# cnbitkmobile

./: .gitignore  Makefile.am  README  configure.ac
extra/: Makefile.am  cl_getdirectory  cl_runloop_antneuro_32  cl_runloop_antneuro_64  cp_mobile_wheelchair.launcher  cp_smrinc_launcher  cp_smrmobile_launcher  dummyclassifier.mat  eegc3_smr_mobile_classify.m  mi_mobile_template.xml  ndf_mi_mobile.m  ndf_smrinc.m  ndf_smrinc_include.m  smrinc_integrator_dynamic.m  smrinc_integrator_ema.m  smrinc_integrator_forceprofile.m  smrinc_integrator_vema.m  smrinc_integrator_xmlparam_dynamic.m  smrinc_integrator_xmlparam_vema.m  smrinc_template.xml
extra/desktop/: CNBILoop-AntNeuro-64EEG.desktop  CNBILoop-Close.desktop  CNBILoop-gUSBamp-32EEG.desktop
extra/ndf/: ndf_mi.m  ndf_mi_include.m  ndf_online_dp.m  ndf_online_dp_include.m  ndf_smr_mobile.m  ndf_smr_mobile_polyfit.m  ndf_smrinc.m  ndf_smrinc_polyfit.m  smrinc_integrator_dynamic.m  smrinc_integrator_dynamic_polyfit.m  smrinc_integrator_forceprofile_polyfit.m  smrinc_integrator_xmlparam_dynamic.m  smrinc_integrator_xmlparam_dynamic_polyfit.m  smrinc_integrator_xmlparam_ema.m  smrinc_integrator_xmlparam_vema.m
extra/ndf/integrator/: ndf_integrator_dynamic.m  ndf_integrator_ema.m  ndf_integrator_forceprofile.m
extra/ndf/mobile/: ndf_mobile.m  ndf_mobile_include.m  ndf_mobile_standard.m
extra/ndf/xml/: ndf_xml_integrator_dynamic.m  ndf_xml_integrator_ema.m
extra/old/: cp_smrinc_launcher  cp_smrmobile_launcher
extra/old/desktop/: CNBILoop-AntNeuro-32EEG.desktop
extra/xml/: CLASSIFIER.mat  mi_mobile_template.xml  mobile_wheelchair_template.xml  smr_mobile_template.xml  smrinc_template.xml
gui/: Makefile.am  cp_smrinc_gui  enter_integrator_params.py  gui_mobile_parameters  smrinc_gui_parameters  smrinc_gui_parameters_old
launcher/: Makefile.am  cp_mobile.launcher
python/Feedback/: BCI.py  BCI_offline.py  Makefile  Makefile.am  Makefile.in  feedback.py  feedback_gif.py  mi_mobile_python  mi_online_python  settings.py  setup.cfg  setup.py  setup_mobile.py  trialstages.py
python/Feedback/lib/: key_logger_old.py
python/Feedback/pybci/: BCI.py  key_logger.py  key_logger_offline.py
src/: .gitignore  CmControl.cpp  CmControl.hpp  CmCopilot.cpp  CmCopilot.hpp  CmEngine.cpp  CmEngine.hpp  CmFeedback.cpp  CmFeedback.hpp  CmWheel.cpp  CmWheel.hpp  Exponential.cpp  Exponential.hpp  Integrator.cpp  Integrator.hpp  Makefile.am  cnbimobile.pc.in  mi_integrator.cpp  mi_mobile_configuration.hpp  mi_mobile_control.cpp  mi_mobile_feedback.cpp  mi_mobile_offline.cpp  mi_mobile_online.cpp  mi_mobile_support.hpp  resting_mobile_offline.cpp  smrinc_robotino_run_generator.cpp  test_control.cpp  test_engine.cpp
