PACKAGE_NAME = @PACKAGE_NAME@

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/ndf
protocolmat_DATA = 	ndf_smrinc.m \
		      		ndf_smrinc_include.m	\
		      		smrinc_integrator_dynamic.m \
			  		smrinc_integrator_ema.m \
			  		smrinc_integrator_forceprofile.m \
			  		smrinc_integrator_vema.m \
			  		smrinc_integrator_xmlparam_dynamic.m \
			  		smrinc_integrator_xmlparam_ema.m \
			  		smrinc_integrator_xmlparam_vema.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/xml
protocolxml_DATA = smrinc_template.xml \
				   CLASSIFIER.mat

bin_SCRIPTS = cp_smrinc_launcher

