PACKAGE_NAME = @PACKAGE_NAME@

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/ndf
protocolmat_DATA = 	ndf/ndf_smrinc.m \
					ndf/ndf_smrinc_polyfit.m \
					ndf/ndf_smr_mobile.m \
					ndf/ndf_smr_mobile_polyfit.m \
		      		ndf/ndf_smrinc_include.m	\
		      		ndf/smrinc_integrator_dynamic.m \
		      		ndf/smrinc_integrator_dynamic_polyfit.m \
			  		ndf/smrinc_integrator_ema.m \
			  		ndf/smrinc_integrator_forceprofile.m \
			  		ndf/smrinc_integrator_forceprofile_polyfit.m \
			  		ndf/smrinc_integrator_vema.m \
			  		ndf/smrinc_integrator_xmlparam_dynamic.m \
			  		ndf/smrinc_integrator_xmlparam_dynamic_polyfit.m \
			  		ndf/smrinc_integrator_xmlparam_ema.m \
			  		ndf/smrinc_integrator_xmlparam_vema.m \
					ndf/ndf_mi.m \
					ndf/ndf_mi_include.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/xml
protocolxml_DATA = xml/smrinc_template.xml \
				   xml/smr_mobile_template.xml \
				   xml/mobile_wheelchair_template.xml \
				   ndf/CLASSIFIER.mat

bin_SCRIPTS = cp_smrinc_launcher \
			  cp_smrmobile_launcher \
			  cp_mobile_wheelchair.launcher

