PACKAGE_NAME = @PACKAGE_NAME@

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/ndf
protocolmat_DATA = 	ndf/integrator/ndf_integrator_ema.m \
					ndf/integrator/ndf_integrator_dynamic.m \
					ndf/integrator/ndf_integrator_forceprofile.m \
					ndf/mobile/ndf_mobile.m \
					ndf/mobile/ndf_mobile_positive.m \
					ndf/mobile/ndf_mobile_include.m \
					ndf/xml/ndf_xml_integrator_ema.m \
					ndf/xml/ndf_xml_integrator_dynamic.m \
					ndf/ndf_smrinc.m \
					ndf/ndf_smrinc_polyfit.m \
					ndf/ndf_smr_mobile.m \
					ndf/ndf_smr_mobile_polyfit.m \
		      		ndf/ndf_smrinc_include.m	\
		      		ndf/smrinc_integrator_dynamic.m \
		      		ndf/smrinc_integrator_dynamic_polyfit.m \
			  		ndf/smrinc_integrator_ema.m \
			  		ndf/smrinc_integrator_forceprofile.m \
			  		ndf/smrinc_integrator_forceprofile_polyfit.m \
			  		ndf/smrinc_integrator_vema.m \
			  		ndf/smrinc_integrator_xmlparam_dynamic.m \
			  		ndf/smrinc_integrator_xmlparam_dynamic_polyfit.m \
			  		ndf/smrinc_integrator_xmlparam_ema.m \
			  		ndf/smrinc_integrator_xmlparam_vema.m \
					ndf/ndf_mi.m \
					ndf/ndf_mi_include.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/xml
protocolxml_DATA = xml/mobile_wheelchair_template.xml \
				   ndf/CLASSIFIER.mat
imagesdir = ${HOME}/.cnbitk/${PACKAGE_NAME}/images
images_DATA = images/both_hands.png \
				 images/both_feet.png \
				 images/eye_open.png

#protocolxml_DATA = xml/smrinc_template.xml \
#				   xml/smr_mobile_template.xml \
#				   xml/mobile_wheelchair_template.xml \
#				   ndf/CLASSIFIER.mat
#
#imagesdir = ${HOME}/.cnbitk/${PACKAGE_NAME}/images
#images_DATA = images/both_hands.png \
#				 images/both_feet.png \
#				 images/eye_open.png
#
#bin_SCRIPTS = cp_smrinc_launcher \
#			  cp_smrmobile_launcher \
#			  cp_mobile_wheelchair.launcher \
#			  cp_mobile_resting.launcher \
#			  cp_mobile_resting.gui \
#			  cp_mobile_wheelchair.gui \
#			  cl_runloop_antneuro_32 \
#			  cl_runloop_antneuro_64 \
#			  cl_getdirectory
#
#iconsdir = ${HOME}/.local/share/icons
#icons_DATA = icons/cnbiloop-antneuro-32.svg \
#			 icons/cnbiloop-antneuro-64.svg \
#			 icons/cnbimobile-joystick.svg \
#			 icons/cnbimobile-wheelchair.svg \
#			 icons/cnbimobile-wheelchair-bci.svg \
#			 icons/cnbimobile-resting.svg \
#			 icons/eegview-32.svg \
#			 icons/eegview-64.svg
#
#desktopdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/desktop
#desktop_DATA = desktop/CNBILoop-AntNeuro-32EEG.desktop \
#			   desktop/CNBILoop-AntNeuro-64EEG.desktop \
#			   desktop/CNBIMobileProtocols.desktop \
#			   desktop/CNBIMobileResting.desktop \
#			   desktop/CNBIWheelchairJoystick.desktop \
#			   desktop/CNBIWheelchairNavigationDemo.desktop \
#			   desktop/eegview-AntNeuro-32EEG.desktop \
#			   desktop/eegview-AntNeuro-64EEG.desktop \
#			   desktop/CNBILoop-Close.desktop \
#			   desktop/CNBIWheelchairVisualization.desktop
#
#install-exec-local:
#	cp desktop/*.desktop ${HOME}/Desktop/ 
#
#uninstall-local:
#	cd ${HOME}/Desktop && rm -f CNBILoop-AntNeuro-32EEG.desktop && \
#	rm -f CNBILoop-AntNeuro-64EEG.desktop && rm -f CNBIMobileProtocols.desktop && \
#	rm -f CNBIWheelchairJoystick.desktop && rm -f CNBIWheelchairNavigationDemo.desktop && \
#	rm -f eegview-AntNeuro-32EEG.desktop && rm -f eegview-AntNeuro-64EEG.desktop && \
#	rm -f CNBILoop-Close.desktop && rm -f CNBIWheelchairVisualization.desktop && \
#	rm -f CNBIMobileResting.desktop
