PACKAGE_NAME = @PACKAGE_NAME@

bin_SCRIPTS = mi_online_python

mi_online_pythondir = $(prefix)/bin

mi_online_python_PYTHON = trialstages.py

graphicsdir = $(prefix)/share/cnbipython/

graphics_DATA = graphics/blk_ring.gif	\
			    graphics/circle.gif		\
			    graphics/cross.gif		\
			    graphics/icon.gif		\
			    graphics/icon0.gif		\
			    graphics/icon1.gif		\
			    graphics/l_arrow.gif		\
			    graphics/ptr.gif			\
			    graphics/ptr_blue.gif	\
			    graphics/ptr_red.gif		\
			    graphics/r_arrow.gif		\
			    graphics/timeout.gif	



